--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/leaflet/leaflet.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "src/assets/leaflet/leaflet.js",
+              "src/assets/BoundaryCanvas.js",
+              "../node_modules/jquery/dist/jquery.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
