--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
             "scripts": [
               "src/assets/leaflet/leaflet.js",
               "src/assets/BoundaryCanvas.js",
-              "../node_modules/jquery/dist/jquery.min.js"
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/chart.js/dist/Chart.min.js"
             ],
             "es5BrowserSupport": true
           },
