--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "canvasjs": "^1.8.1",
+    "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "rxjs": "~6.3.3",
