Syntax error fix

--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
             "scripts": [
               "src/assets/leaflet/leaflet.js",
               "src/assets/BoundaryCanvas.js",
-               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/chart.js/dist/Chart.min.js"
             ],
