--- a/angular.json
+++ b/angular.json
@@ -29,13 +29,13 @@
             "styles": [
               "src/styles.scss",
               "src/assets/leaflet/leaflet.css",
-               "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              // "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
               "src/assets/leaflet/leaflet.js",
               "src/assets/BoundaryCanvas.js",
-               "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/jquery/dist/jquery.min.js",
+              //  "./node_modules/bootstrap/dist/js/bootstrap.min.js",
+              // "node_modules/jquery/dist/jquery.min.js",
               "node_modules/chart.js/dist/Chart.min.js"
             ],
             "es5BrowserSupport": true
